--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1907,4 +1907,11 @@ form label {
   font-family: 'Cookie', cursive !important;
 }
 
+@media only screen and (max-width: 400px) {
+  .sub-title {
+    font-size: 16px !important;
+    margin: 0 0 8px 0 !important;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
